grammar.js
        source_file: $ => seq(
            optional($.features_directive),
            optional(choice($.package_declaration, $.macro_package_declaration)),
            repeat($.import_list),
            repeat(seq(optional(token(';')), choice(choice(
                    $.variable_declaration, $.function_definition, $.operator_function_definition,
                    $.class_definition, $.interface_definition, $.struct_definition, $.enum_definition,
                    $.type_alias, $.extend_definition, $.foreign_declaration, $.macro_definition,
                    $.decorated_declaration, $.macro_expression,
                ), $.main_definition))),
            optional(token(';')),
        ),

        main_definition: $ => seq(
            TOKENS.MAIN, $.parameter_list, optional($.return_type),
            $.block
        ),

// ===== declarations =====
        _modifiers_var: $ => alias(prec.left(repeat1(choice(
            ...MODIFIER_TOKENS.map(t => reserved('modifier', t)),
            TOKENS.STATIC, TOKENS.MUT, TOKENS.UNSAFE,
        ))), $.modifiers),
        class_definition: $ => seq(typeHeader($, TOKENS.CLASS, $._class_name), field('body', $.declaration_body)),
        _declaration_list: $ => repeat1(seq(
            optional(repeat1(token(';'))),
            choice(
                    $.variable_declaration,
                    $.function_definition,
                    $.operator_function_definition,
                    $.property_definition,
                    $.init,
                    $.static_init,
                    $.primary_init,
                    $.finalizer,
                    $.decorated_declaration,
                    $.macro_expression,
                ),
        )),

        declaration_body: $ => seq(
            '{',
            optional($._declaration_list),
            '}'
        ),
        _class_name: $ => alias(reserved('id', $.identifier), $.class_name),
        function_definition: $ => prec.right(seq(
            optional($.modifiers),
            TOKENS.FUNC,
            field('name', alias(reserved('id', $.identifier), $.func_name)),
            optional($.type_parameters),
            field('parameters', $.parameter_list),
            optional(field('return_type', $.return_type)),
            optional($.generic_constraints),
            optional(field('body', $.block))
        )),
        init: $ => prec(PREC.INIT, seq(
            optional($.modifiers),
            TOKENS.INIT, field('parameters', $.parameter_list),
            optional(field('body', $.block))
        )),
        return_type: $ => seq(':', field('type', $._type)),

        block: $ => seq(
            '{',
            optional($._expression_or_declarations),
            '}',
        ),
        _expression_or_declarations: $ => repeat1(seq(
            choice(
                alias($._local_variable_declaration, $.variable_declaration),
                $.function_definition,
                $._expression
            ),
            repeat(terminator($)),
        )),

        _var_decl_tail: $ => seq(
            choice(TOKENS.LET, TOKENS.VAR, TOKENS.CONST),
            field('name', alias($._pattern_irrefutable, $.variable_name)),
            choice(
                seq(':', field('type', $._type), optional(seq('=', field("initializer", $._expression)))),
                seq('=', field("initializer", $._expression))
            ),
        ),
        variable_declaration: $ => seq(
            optional($._modifiers_var),
            $._var_decl_tail,
        ),
// ===== parameters & calls =====
        parameter_list: $ => seq(
            '(',
            optional(choice(
                seq(sep1($.parameter, ','), optional(seq(',', sep1($.named_parameter, ',')))),
                sep1($.named_parameter, ','),
            )),
            optional($.ellipsis_parameter),
            optional(','),
            ')',
        ),

        call_suffix: $ => seq(
            '(',
            optional(commaSep1Trailing(choice(
                seq(reserved('id', $.identifier), ':', $._expression),
                $._expression,
                seq(TOKENS.INOUT, optional(seq($._expression, '.')), reserved('id', $.identifier))
            ))),
            $._call_tail
        ),
        // The "whose lambda?" fork, isolated so the conflict is named after it.
        _call_tail: $ => seq(')', optional($.lambda_expression)),
// ===== statements & expressions =====
        _primary_expression: $ => choice(
            $._literal,
            $.array_literal,
            alias(choice(reserved('id', $.identifier), ...MODIFIER_TOKENS), $.identifier),
            $.parenthesized_expression,
            $.tuple_expression,
            $.range_expression,
            $.lambda_expression,
            $.jump_expression,
            $.synchronized_expression,
            $.spawn_expression,
            $.perform_expression,
            $.resume_expression,
            $.unsafe_expression,
            $.this_super_expression,
            $.if_expression,
            $.match_expression,
            choice($.for_in_expression, $.while_expression, $.do_while_expression),
            $.try_expression,
            $.quote_expression,
            $.macro_expression,
            $._dollar_identifier,
            seq(
                    token('$('),
                    $._expression,
                    ')',
                ),
        ),

        _expression: $ => choice(
            $.postfix_expression,
            $.unary_expression,
            $.binary_expression,
            $.is_expression,
            $.as_expression,
            $.assignment_expression,
        ),

        assignment_expression: $ => prec.right(PREC.ASSIGN, seq(
            field('variable', prec(1, choice(
                    $.postfix_expression,
                    $.unary_expression,
                    $.binary_expression,
                    $.is_expression,
                    $.as_expression,
                ))),
            field('operator', choice(
                token('='), token('+='), token('-='), token('*='), token('/='), 
                token('%='), token('**='), token('&='), token('|='), token('^='),
                token('<<='), token('>>='), token("&&="), token("||=")
            )),
            field('value', $._expression),
        )),

        binary_expression: $ => prec.dynamic(-1, choice(
            prec.left(PREC.OR, seq(
                field('left', $._expression),
                field('operator', token('||')),
                field('right', $._logical_operand_right))),
            prec.left(PREC.AND, seq(
                field('left', $._expression),
                field('operator', token('&&')),
                field('right', $._logical_operand_right))),
            bop($, PREC.COALESCE,  ['??'], 'right'),
            bop($, PREC.EQUALITY,  ['==', '!=']),
            bop($, PREC.REL,       ['>', '<', '>=', '<=', TOKENS.IN, TOKENS.NOT_IN]),
            bop($, PREC.BIT_OR,    ['|']),
            bop($, PREC.BIT_XOR,   ['^']),
            bop($, PREC.BIT_AND,   ['&']),
            bop($, PREC.SHIFT,     ['<<', '>>']),
            bop($, PREC.ADD_SUB,   ['+', '-']),
            bop($, PREC.MUL_DIV,   ['*', '/', '%']),
            bop($, PREC.POWER,     ['**'], 'right'),
            bop($, PREC.PIPE,      ['|>', '~>']),
        )),

        unary_expression: $ => prec.left(PREC.UNARY, seq(
            field('operator', choice('!', '-')),
            field('argument', $._expression)
        )),

        _logical_operand_right: $ => choice($._expression, $.let_pattern_destructor),
        _cond_tail: $ => seq(
            $.let_pattern_destructor,
            repeat(seq(choice('&&', '||'), $._logical_operand_right))),

        range_expression: $ => prec.right(PREC.RANGE, seq(
            optional(field('start', $._expression)),
            choice(token('..'), token('..=')),
            optional(field('end', $._expression)),
            optional(seq(':', field('step', $._expression)))
        )),

        lambda_expression: $ => seq(
            choice('{', $._brace_open),
            optional(seq(optional($.lambda_parameters), token('=>'))),
            optional($._expression_or_declarations),
            choice('}', $._brace_close)
        ),
        lambda_parameters: $ => commaSep1Trailing($.lambda_parameter),
        lambda_parameter: $ => seq(choice($._var_binding_pattern, '_'), optional(seq(':', $._type))),

        jump_expression: $ => choice(
            prec.right(seq(TOKENS.THROW, $._expression)),
            prec.right(seq(TOKENS.RETURN, optional($._expression))),
            TOKENS.CONTINUE,
            TOKENS.BREAK,
        ),

        this_super_expression: _ => choice(TOKENS.THIS, TOKENS.SUPER),
        while_expression: $ => seq(
            TOKENS.WHILE, '(', choice($._expression, $._cond_tail), ')',
            $.block
        ),

        for_in_expression: $ => seq(
            TOKENS.FOR, '(', $._pattern_irrefutable, TOKENS.IN, $._expression, optional($.pattern_guard), ')', $.block
        ),

        try_expression: $ => prec.right(seq(
            TOKENS.TRY,
            optional(seq('(', field('resources', $.resource_specifications), ')')),
            field('try_body', $.block),
            repeat(choice($.catch_clause, $.handle_clause)),
            optional(seq(TOKENS.FINALLY, field('finally_body', $.block)))
        )),


        resource_specifications: $ => commaSep1Trailing($.resource_specification),
        resource_specification: $ => seq(reserved('id', $.identifier), optional(seq(':', $._type)), '=', $._expression),  // $.classType

        catch_clause: $ => seq(
            TOKENS.CATCH,
            choice(
                seq('(', optional($.catch_pattern), ')'),
                $.catch_pattern,
            ),
            field('catch_body', $.block)
        ),

        synchronized_expression: $ => seq(TOKENS.SYNCHRONIZED, '(', $._expression, ')', $.block),
        spawn_expression: $ => seq(TOKENS.SPAWN, optional(seq('(', $._expression, ')')), $.lambda_expression),
        perform_expression: $ => seq(TOKENS.PERFORM, field('argument', $._expression)),

        resume_expression: $ => prec.left(seq(
            TOKENS.RESUME,
            optional(choice(
                seq(TOKENS.WITH, field('with_argument', $._expression)),
                seq(TOKENS.THROWING, field('throwing_argument', $._expression)),
            )),
        )),
        unsafe_expression: $ => seq(TOKENS.UNSAFE, $.block),

        // prec(LET_COND): the reduce beats && / || shifts — `(let p <- a) && b`,
        // the bound name in scope for the tail; tighter operators stay in the RHS.
        wildcard_pattern: _ => token('_'),
        _pattern_irrefutable: $ => choice(
            $.wildcard_pattern,
            $._var_binding_pattern,
            alias($._tuple_pattern_irrefutable, $.tuple_pattern),
        ),

        _var_binding_pattern: $ => alias(choice(reserved('id', $.identifier), ...MODIFIER_TOKENS), $.var_binding_pattern),
        catch_pattern: $ => choice($.wildcard_pattern, seq(choice($.wildcard_pattern, $._var_binding_pattern), ':', sep1($._type, '|'))),

// ===== types =====
        _type: $ => choice(
            $.arrow_type, $.tuple_type, $.prefix_type,
            alias(TOKENS.INT8, $.Int8), alias(TOKENS.INT16, $.Int16), alias(TOKENS.INT32, $.Int32), alias(TOKENS.INT64, $.Int64), alias(TOKENS.INTNATIVE, $.IntNative),
            alias(TOKENS.UINT8, $.UInt8), alias(TOKENS.UINT16, $.UInt16), alias(TOKENS.UINT32, $.UInt32), alias(TOKENS.UINT64, $.UInt64), alias(TOKENS.UINTNATIVE, $.UIntNative),
            alias(TOKENS.FLOAT16, $.Float16), alias(TOKENS.FLOAT32, $.Float32), alias(TOKENS.FLOAT64, $.Float64),
            alias(token('String'), $.String), alias(TOKENS.RUNE, $.Rune), alias(TOKENS.BOOL, $.Bool),
            alias(TOKENS.NOTHING, $.Nothing), alias(TOKENS.UNIT, $.Unit), alias(TOKENS.THISTYPE, $.Thistype),
            $.user_type, $.generic_type,
            $.const_generic,
        ),

        _generic_arguments: $ => seq($._generic_lt, '<', $._type_list, '>'),

        field_access: $ => seq('.', reserved('id', $.identifier)),
        index_access: $ => seq(
            '[',
            choice(
                seq($._expression, optional(token('..'))),
                seq($._expression, choice(token('..'), token('..=')), $._expression, optional(seq(':', $._expression))),
                seq(token('..'), $._expression,)
            ),
            ']'
        ),
        quest_access: $ => seq('?', choice(
            $.field_access,
            $.index_access,
            $.call_suffix,
            $.lambda_expression,
        )),
        inc_or_dec: _ => token(choice('++', '--')),

        postfix_expression: $ => choice(
            $._primary_expression,
            prec.right(PREC.MEMBER, seq(
                field('base', $.postfix_expression),
                field('suffix', choice(
                        prec(PREC.MEMBER, $.field_access), prec(PREC.MEMBER, $.scope_resolution),
                        prec(PREC.ARRAY, $.index_access), prec(PREC.POSTFIX, $.quest_access),
                        prec(PREC.PARENS, $.call_suffix), prec(PREC.POSTFIX, $.inc_or_dec),
                        alias($._generic_arguments, $.type_arguments),
                        $.lambda_expression,
                    )),
            )),
        ),

// ===== literals & lexicals =====
        integer_literal: _ => token(seq(
            choice(
                seq('0', choice('x', 'X'), hexDigits),
                seq('0', choice('o', 'O'), seq(/[0-7]/, repeat(choice('_', /[0-7]/)))),
                seq('0', choice('b', 'B'), seq(/[01]/, repeat(choice('_', /[01]/)))),
                decimalLiteral,
            ),
            optional(/_?[iu](8|16|32|64)/),
        )),
        boolean_literal: _ => token(prec(PREC.TOKEN, choice('true', 'false'))),

        // The delimiters are aliased so queries can color them (anonymous
        // externals are not queryable); content runs keep expression coloring
        // of interpolations intact.
        string_literal: $ => choice(
            prec.right(seq(
                alias($._line_string_start, $.string_start),
                repeat(choice(alias($._line_string_content, $.string_content), $.escape_sequence, $.string_interpolation)),
                optional(alias($._line_string_end, $.string_end)),
            )),
            prec.right(seq(
                alias($._multiline_string_start, $.string_start),
                optional(seq(optional(/\r/), /\n/)),
                repeat(choice(alias($._multiline_string_content, $.string_content), $.escape_sequence, $.string_interpolation)),
                optional(alias($._multiline_string_end, $.string_end)))),
            seq(alias($._raw_string_start, $.string_start),
               optional(alias($._raw_string_content, $.string_content)),
               optional(alias($._raw_string_end, $.string_end)),
            )),


        identifier: _ => token(choice(
            /[a-zA-Z_][a-zA-Z0-9_]*/,
            seq('`', /[a-zA-Z_][a-zA-Z0-9_]*/, '`'),
        )),

    },
};

module.exports = grammar(M);
